k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/part-of: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "static-ingress"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.debray.dev
    http:
      paths:
      - backend:
          serviceName: nginx-dev
          servicePort: 80
